--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,9 +3,18 @@
 # Please see the documentation for all configuration options:
 # https://docs.github.com/code-security/dependabot/dependabot-version-updates/configuration-options-for-the-dependabot.yml-file
 
+
 version: 2
 updates:
-  - package-ecosystem: "" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  # Atualizar dependências do ecossistema npm
+  - package-ecosystem: "npm"
+    directory: "/"
     schedule:
-      interval: "weekly" 
+      interval: "weekly"
+
+  # Manter dependências para GitHub Actions
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+
