--- a/.github/workflows/github-actios-demo.yml
+++ b/.github/workflows/github-actios-demo.yml
@@ -35,3 +35,9 @@ jobs:
           cd NOTES
           cd src
           npx prettier . --check
+
+      - name: Run JSCPD
+        run: |
+          cd src
+          npx jscpd 
+
