--- a/NOTES/package.json
+++ b/NOTES/package.json
@@ -16,7 +16,8 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-speech-recognition": "^3.10.0",
-		"sonner": "^1.4.0"
+		"sonner": "^1.4.0",
+		"jscpd": "^3.5.10"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.55",
