Adicionando JSPCD para verfificação de Código duplicado.
link:(https://www.npmjs.com/package/jscpd?activeTab=readme)

--- a/.github/workflows/github-actios-demo.yml
+++ b/.github/workflows/github-actios-demo.yml
@@ -35,3 +35,9 @@ jobs:
           cd NOTES
           cd src
           npx prettier . --check
+
+      - name: Run JSCPD
+        run: |
+          cd  NOTES
+          cd src
+          npx jscpd 
