--- a/NOTES/package.json
+++ b/NOTES/package.json
@@ -12,24 +12,29 @@
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@types/dom-speech-recognition": "^0.0.4",
 		"date-fns": "^3.3.1",
+		"jscpd": "^3.5.10",
 		"lucide-react": "^0.323.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-speech-recognition": "^3.10.0",
-		"sonner": "^1.4.0",
-		"jscpd": "^3.5.10"
+		"sonner": "^1.4.0"
 	},
 	"devDependencies": {
+		"@eslint/js": "^9.2.0",
 		"@types/react": "^18.2.55",
 		"@types/react-dom": "^18.2.19",
 		"@typescript-eslint/eslint-plugin": "^6.21.0",
 		"@typescript-eslint/parser": "^6.21.0",
 		"@vitejs/plugin-react": "^4.2.1",
 		"autoprefixer": "^10.4.17",
+		"eslint": "^8.57.0",
+		"eslint-plugin-react": "^7.34.1",
+		"globals": "^15.2.0",
 		"postcss": "^8.4.35",
 		"prettier": "3.2.5",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5.2.2",
+		"typescript-eslint": "^7.8.0",
 		"vite": "^5.1.7"
 	}
 }
