--- a/.github/workflows/github-actios-demo.yml
+++ b/.github/workflows/github-actios-demo.yml
@@ -49,5 +49,5 @@ jobs:
         run: |
           cd NOTES
           cd src
-          npx eslint --ext js,jsx --report-unused-disable-directives
+          npx eslint 
 
