--- a/.github/workflows/github-actios-demo.yml
+++ b/.github/workflows/github-actios-demo.yml
@@ -57,9 +57,7 @@ jobs:
       ## Correção do erro de sintaxe no arquivo linter.js
       - name: Fix ESLint Syntax Error
         run: |
-          cd C:\npm\cache\_npx\1164\node_modules\eslint\lib\linter
-          sed -i '823s/??=/=/' linter.js
-
+          sed -i '823s/??=/=/' C:/npm/cache/_npx/7340/node_modules/eslint/lib/linter/linter.js
 
       - name: Upload ESLint results 
         uses: actions/upload-artifact@v4
