--- a/.github/workflows/github-actios-demo.yml
+++ b/.github/workflows/github-actios-demo.yml
@@ -51,7 +51,8 @@ jobs:
       ## Correção do erro de sintaxe no arquivo linter.js
       - name: Fix ESLint Syntax Error
         run: |
-          sed -i 's/\(slots\.times\.passes\[passIndex\]\[type\]\) \?\?= {}/if (!\1) \1 = {};/' C:/npm/cache/_npx/7340/node_modules/eslint/lib/linter/linter.js
+          cd C:\npm\cache\_npx\1164\node_modules\eslint\lib\linter
+          sed -i '823s/??=/=/' linter.js
  
       - name: Run ESLint
         run: |
