--- a/.github/workflows/github-actios-demo.yml
+++ b/.github/workflows/github-actios-demo.yml
@@ -48,7 +48,12 @@ jobs:
       - name: Install ESLint and security plugin
         run: npm install eslint eslint-plugin-security --save-dev
 
-
+      ## Correção do erro de sintaxe no arquivo linter.js
+      - name: Fix ESLint Syntax Error
+        run: |
+          cd C:\npm\cache\_npx\1164\node_modules\eslint\lib\linter
+          cd C:\npm\cache\_npx\7628\node_modules\eslint\lib\linter
+          sed -i '823s/??=/=/' /linter.js
  
       - name: Run ESLint
         run: |
