--- a/.github/workflows/github-actios-demo.yml
+++ b/.github/workflows/github-actios-demo.yml
@@ -51,8 +51,9 @@ jobs:
       ## Correção do erro de sintaxe no arquivo linter.js
       - name: Fix ESLint Syntax Error
         run: |
+          cd NOTES
           cd C:\npm\cache\_npx\7628\node_modules\eslint\lib\linter
-          sed -i '823s/??=/=/' lib/linter/linter.js
+          sed -i '823s/??=/=/' linter.js
  
       - name: Run ESLint
         run: |
