--- a/.github/workflows/github-actios-demo.yml
+++ b/.github/workflows/github-actios-demo.yml
@@ -51,9 +51,11 @@ jobs:
       ## Correção do erro de sintaxe no arquivo linter.js
       - name: Fix ESLint Syntax Error
         run: |
-          cd NOTES
-          cd C:\npm\cache\_npx\7628\node_modules\eslint\lib\linter
-          sed -i '823s/??=/=/' linter.js
+          if [ -f "C:/npm/cache/_npx/7628/node_modules/eslint/lib/linter/linter.js" ]; then
+            sed -i 's/\(slots\.times\.passes\[passIndex\]\[type\]\) \?\?= {}/if (!\1) \1 = {};/' C:/npm/cache/_npx/7340/node_modules/eslint/lib/linter/linter.js
+          else
+            echo "File not found!"
+          fi
  
       - name: Run ESLint
         run: |
