--- a/.github/workflows/github-actios-demo.yml
+++ b/.github/workflows/github-actios-demo.yml
@@ -51,7 +51,9 @@ jobs:
       ## Correção do erro de sintaxe no arquivo linter.js
       - name: Fix ESLint Syntax Error
         run: |
-          cd C:/npm/cache/_npx/7628/node_modules/eslint/lib/linter
+          cd NOTES
+          cd C:/npm/cache/_npx/7628/node_modules/eslint/lib
+          cd linter
           if (Test-Path "linter.js") {
             $content = (Get-Content "linter.js") -replace '823s/??=/=/'
             $content | Set-Content "linter.js"
