--- a/.github/workflows/github-actios-demo.yml
+++ b/.github/workflows/github-actios-demo.yml
@@ -38,6 +38,13 @@ jobs:
 
       - name: Run JSCPD
         run: |
-          cd  NOTES
+          cd NOTES
           cd src
           npx jscpd 
+
+      - name: Run Circular Dependency Check
+        run: 
+          cd NOTES
+          cd src
+          npm check:circles 
+
