--- a/NOTES/package.json
+++ b/NOTES/package.json
@@ -12,12 +12,12 @@
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@types/dom-speech-recognition": "^0.0.4",
 		"date-fns": "^3.3.1",
+		"jscpd": "^3.5.10",
 		"lucide-react": "^0.323.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-speech-recognition": "^3.10.0",
-		"sonner": "^1.4.0",
-		"jscpd": "^3.5.10"
+		"sonner": "^1.4.0"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.55",
@@ -26,8 +26,13 @@
 		"@typescript-eslint/parser": "^6.21.0",
 		"@vitejs/plugin-react": "^4.2.1",
 		"autoprefixer": "^10.4.17",
+		"eslint": "^8.57.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-prettier": "^5.1.3",
+		"husky": "^9.0.11",
+		"lint-staged": "^15.2.7",
 		"postcss": "^8.4.35",
-		"prettier": "3.2.5",
+		"prettier": "^3.2.5",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5.2.2",
 		"vite": "^5.1.7"
