--- a/NOTES/package.json
+++ b/NOTES/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"flow": "flow"
 	},
 	"dependencies": {
 		"@radix-ui/react-dialog": "^1.0.5",
@@ -29,6 +30,7 @@
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.1.3",
+		"flow-bin": "^0.238.3",
 		"husky": "^9.0.11",
 		"lint-staged": "^15.2.7",
 		"postcss": "^8.4.35",
